Fix header text align

--- a/_sass/svg-interact.scss
+++ b/_sass/svg-interact.scss
@@ -16,7 +16,7 @@ $i_1_3: #FFFF00;
 // $i_2_3: #4cf6fa;
 $i_2_3: cyan;
 
-header {
+header.dataviz {
   text-align: center;
 }
 .back-nav {
